# mipt_sbt_mlops

./: README.md
task1/: CMakeLists.txt  Dockerfile  Makefile  README.md  bindings.cpp  gauss_jordan.cpp  gauss_jordan.h  pyproject.toml  test_gauss_jordan.py
